# SmartPulpit

./: CMakeLists.txt  build.sh
mtCNNModels/: det1_relu1.engine  det1_relu10.engine  det1_relu11.engine  det1_relu12.engine  det1_relu13.engine  det1_relu14.engine  det1_relu15.engine  det1_relu16.engine  det1_relu17.engine  det1_relu18.engine  det1_relu19.engine  det1_relu2.engine  det1_relu20.engine  det1_relu21.engine  det1_relu3.engine  det1_relu4.engine  det1_relu5.engine  det1_relu6.engine  det1_relu7.engine  det1_relu8.engine  det1_relu9.engine  det2_relu.engine  det3_relu.engine
src/: .Util.js.swp  .presentation.cpp.swp  .request.cpp.swp  LoginScreenForm.qml  MenuScreenForm.qml  MenuScreenForm.qmlc  Util.js  faceNet.cpp  faceNet.h  facerecog.cpp  facerecog.h  hello.qml  loop.cpp  loop.h  main.cpp  main.qml  main2.cpp  newitem.qml  newitem2.qml  present.sh  present2.sh  presentation.cpp  presentation.h  qml.qrc  request.cpp  request.h
